# ai-gate

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md
.github/workflows/: dev-ci.yml  release.yml
backend/: go.mod
desktop/: .gitignore  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: README.en.md  README.zh-CN.md  import-export-encryption-flow.zh-CN.md  real-snapshot-cleanup-migration.zh-CN.md  testing.md  thin-gateway-mode.md
docs/plans/: 2026-03-07-codex-router-design.md  2026-03-07-codex-router.md  2026-03-08-active-account-routing-and-logging.md  2026-03-09-settings-redesign-design.md  2026-03-09-settings-redesign.md  2026-03-09-thin-gateway-official-mirror-plan.md  2026-03-09-thin-gateway-only-plan.md  2026-03-09-thin-gateway-third-party-responses.md  2026-03-09-third-party-responses-default-design.md  2026-03-09-third-party-responses-default-plan.md  2026-03-09-tray-stability-and-plan-cleanup-design.md  2026-03-09-tray-stability-and-plan-cleanup.md  2026-03-10-account-reorder-and-form-cleanup-design.md  2026-03-10-account-reorder-and-form-cleanup.md  2026-03-10-github-release-pipeline.md  2026-03-10-release-metadata-sync.md  2026-03-10-settings-localization-and-theme-design.md  2026-03-10-settings-localization-and-theme.md  2026-03-11-all-branch-dev-ci.md  (+40 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: migrate_openai_history_to_aigate.sh
(+140 files in other folders)
