[package]
name = "aigate-desktop"
version = "2.3.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
